# trader

pkg/: manifest.json  metadata.json
trader/: Cargo.toml
trader/src/: helpers.rs  lib.rs
trader/src/helpers/: calls.rs  contracts.rs  mod.rs
