[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { path = "../../process_lib" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }
alloy-primitives = "0.6.2"
alloy-consensus = { git = "https://github.com/alloy-rs/alloy" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
