[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "baad9cc" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }
alloy-primitives = "0.6.2"
alloy-consensus = { git = "https://github.com/alloy-rs/alloy" }
rust-crypto-wasm = "0.3.1"
rand = "0.8.5"
alloy-sol-types = "0.6.2"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
