[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
kinode_process_lib = { git = "https://github.com/kinode-dao/process_lib", rev = "1e14a03" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "efcc759" }
alloy-primitives = "0.6.2"
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "098ad56" }
rust-crypto-wasm = "0.3.1"
frankenstein = { version = "0.30", default-features = false, features = ["telegram-trait"] }
rand = "0.8.5"
alloy-sol-types = "0.6.2"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "kinode:process"
